--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,23 +22,46 @@ html{
 }
 
 h1{
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
 }
 
 h2{
-    font-size: 2rem;
+    font-size: 1.5rem;
+}
+
+h3{
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+}
+
+h4{
+    font-size: 0.75rem;
+    margin-bottom: 0.5rem;
+}
+
+.site-container{
+    display:flex;
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+.grey{
+    background-color: #D5D5D5;
+}
+
+.light-grey{
+    background-color: #F7F5F5;
 }
 
 /* Header Section Styling */
 
 header{
-    display:flex;
     position: fixed;
     z-index: 10;
     width: 100%;
     background-color: white;
-    height: 4rem;
 }
 
 .logo{
@@ -46,6 +69,7 @@ header{
     flex: 1;
     align-items: center;
     margin-left: 1.5rem;
+    height: 4rem;
 }
 
 .logo img{
@@ -96,19 +120,23 @@ header{
     .logo{
         display: none;
     }
-    .mobile{
+    header .mobile{
         display:flex;
         flex: 1;
-        align-items: center;
         margin-right: 1.5rem;
+        height: 4rem;
     }
-    .mobile ul{
+    header .mobile ul{
         display: flex;
         flex: 1;
         justify-content: space-between;
     }
-    .mobile li img{
+    header .mobile li img{
         width: 2.5rem;
+    }
+    header ul {
+        display: flex;
+        align-items: center;
     }
 }
 
@@ -118,24 +146,29 @@ header{
     display: flex;
     position: relative;
     top: 4rem;
-    background-color: #D5D5D5;
+    margin-bottom: 2rem;
 }
 
+/* a banner and information image width of 55% plus 48px of padding
+   works out to 60% of the image container in total.
+*/
+
 .study{
-    width: 60%;
-    margin: 2rem 1.5rem;
+    width: 55%;
+    padding: 2rem 1.5rem;
+    border-right: solid 1px #D5D5D5;
 }
 
 .study img{
     width: 100%;
 }
 
-.start{
+.start-here{
     margin: auto 0;
     color: #383838;
 }
 
-.start .btn{
+.start-here .btn{
     padding: 0.5rem;
     margin-top: 2rem;
     text-align: center;
@@ -144,33 +177,33 @@ header{
     font-size: 2rem;
 }
 
-.start .btn:hover{
+.start-here .btn:hover{
     opacity: 0.8;
     background-color:#01016B;
     transition: background-color 500ms ease-in;
 }
 
-/*Banner Section Tablet and Mobile Styling */
+/* Banner Section Tablet and Mobile Styling */
 
 @media only screen and (max-width: 760px) {
 h1{
     font-size: 2rem;
     font-weight: bold;
     }
-h2, .start .btn{
+h2, .start-here .btn{
     font-size: 1.33rem;
     }
 }
 
 @media only screen and (max-width: 460px) {
-    .banner{
+    .banner .site-container{
         flex-direction: column;
     }
     .study{
-        margin: 0;
+        padding: 0;
         width: 100%;
     }
-    .start{
+    .start-here{
         margin: 2rem 1rem;
     }
     .intro h2{
@@ -183,4 +216,104 @@ h2, .start .btn{
     h2, .start .btn{
         font-size: 2rem;
         }
+}
+
+/* Information Section Styling */
+
+.Information{
+    position: relative;
+    top: 2rem;
+}
+
+.study h1{
+    margin-top: 2rem;
+} 
+
+.study h4{
+    margin-top: 1.5rem;
+} 
+
+.academy{
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 2rem;
+    width: 40%;
+}
+
+.academy-img:first-child{
+    padding: 0 1rem 1rem 1rem;
+    border-bottom: solid 2px #D5D5D5;
+}
+
+.academy-img{
+    width: 35%;
+    padding: 1rem;
+}
+
+.academy-img img{
+    width: 100%;
+    height: auto;
+}
+
+.academy-info{
+    display: flex;
+    flex-direction: column;
+    width: 56%;
+    justify-content: center;
+}
+
+.academy .border{
+    border-bottom: solid 2px #D5D5D5;
+}
+
+.academy a{
+    text-decoration: none;
+    color: rgb(71, 181, 245);
+    font-weight: bold;
+    font-size: 0.75rem;
+}   
+
+.academy-img-mobile{
+    display:none;
+}
+
+/* Information Section Tablet and Mobile Styling */
+
+/* @media only screen and (max-width: 760px) {
+
+} */
+
+@media only screen and (max-width: 460px) {
+    .Information .study, .academy-img img {
+        display: none;
+    }
+    .academy{
+        padding: 0;
+        width: 100%;
+        background-color: #F7F5F5;
+    }
+    .academy .border{
+        border-bottom: none;
+    }
+    .academy-img:first-child{
+        border-bottom: none;
+        padding: 0;
+    }
+    .academy-img-mobile {
+        display: block;
+        width: 100%;
+        padding: 1rem;
+    }
+    .academy-img-mobile img{
+        width: 100%;
+
+    }
+    .academy-info {
+        margin-left: 2rem;
+        width: 100%;
+        background-color: #F7F5F5;
+    }
+.academy .grey {
+        background-color: #F7F5F5;
+    }
 }
