Courses sections complete for Desktop and Mobile views

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,19 +5,19 @@
 
 html{
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: 'Roboto', cursive;
 }
 
 .lighttext, .darktext {
     font-size: 2rem;
-    font-family: Arial, Helvetica, sans-serif;
 }
 .lighttext{
-    color: #75323F;
+    color: #a39f9f;
 }
 
 .darktext{
-    color: #565656;
+    color: #0e0d0d;
     font-weight: bold;
 }
 
@@ -45,14 +45,6 @@ h4{
     display:flex;
     max-width: 960px;
     margin: 0 auto;
-}
-
-.grey{
-    background-color: #D5D5D5;
-}
-
-.light-grey{
-    background-color: #F7F5F5;
 }
 
 /* Header Section Styling */
@@ -93,7 +85,7 @@ header{
 
 .desktop a:hover{
     font-weight: bold;
-    background-color:#01016B;
+    background-color:#47B5F5;
     color: white;
     padding: 0.4rem 0;
     border-radius: 5%;
@@ -105,13 +97,15 @@ header{
     display: none;
 }
 
-/* Header Section Tablet and Mobile Styling */
+/* Header Section Tablet Styling */
 
 @media only screen and (max-width: 760px) {
     .logo .lighttext, .logo .darktext{
         display: none;
     }
 }
+
+/* Header Section  Mobile Styling */
 
 @media only screen and (max-width: 460px) {
     .desktop ul{
@@ -147,6 +141,7 @@ header{
     position: relative;
     top: 4rem;
     margin-bottom: 2rem;
+    background-color: #D5D5D5;
 }
 
 /* a banner and information image width of 55% plus 48px of padding
@@ -168,7 +163,7 @@ header{
     color: #383838;
 }
 
-.start-here .btn{
+.banner .btn{
     padding: 0.5rem;
     margin-top: 2rem;
     text-align: center;
@@ -179,11 +174,11 @@ header{
 
 .start-here .btn:hover{
     opacity: 0.8;
-    background-color:#01016B;
+    background-color:#47B5F5;
     transition: background-color 500ms ease-in;
 }
 
-/* Banner Section Tablet and Mobile Styling */
+/* Banner Section Tablet Styling */
 
 @media only screen and (max-width: 760px) {
 h1{
@@ -195,27 +190,30 @@ h2, .start-here .btn{
     }
 }
 
+/* Banner Section Mobile Styling */
+
 @media only screen and (max-width: 460px) {
     .banner .site-container{
         flex-direction: column;
+    }
+    .start-here{
+        margin: 2rem 1rem;
     }
     .study{
         padding: 0;
         width: 100%;
     }
-    .start-here{
-        margin: 2rem 1rem;
-    }
-    .intro h2{
-        margin: 1.5rem 0 2rem 0; 
-    }
-    h1{
-        font-size: 3rem;
+    .intro h1{
+        font-size: 2.6rem;
         font-weight: bold;
         }
-    h2, .start .btn{
-        font-size: 2rem;
-        }
+    .intro h2{
+        margin: 1.5rem 0 2rem 0;
+        font-size: 1.8rem;
+    }
+    .banner .btn{
+        background-color: #999999; 
+    }
 }
 
 /* Information Section Styling */
@@ -223,6 +221,7 @@ h2, .start-here .btn{
 .Information{
     position: relative;
     top: 2rem;
+    background-color: #F7F5F5;
 }
 
 .study h1{
@@ -231,6 +230,7 @@ h2, .start-here .btn{
 
 .study h4{
     margin-top: 1.5rem;
+    line-height: 1.2rem;
 } 
 
 .academy{
@@ -238,6 +238,7 @@ h2, .start-here .btn{
     flex-wrap: wrap;
     padding-top: 2rem;
     width: 40%;
+    margin-bottom: 2rem;
 }
 
 .academy-img:first-child{
@@ -255,6 +256,10 @@ h2, .start-here .btn{
     height: auto;
 }
 
+.greybg{
+    background-color: #D5D5D5;
+}
+
 .academy-info{
     display: flex;
     flex-direction: column;
@@ -268,7 +273,7 @@ h2, .start-here .btn{
 
 .academy a{
     text-decoration: none;
-    color: rgb(71, 181, 245);
+    color: #47B5F5;
     font-weight: bold;
     font-size: 0.75rem;
 }   
@@ -277,14 +282,20 @@ h2, .start-here .btn{
     display:none;
 }
 
-/* Information Section Tablet and Mobile Styling */
+.academy .academy-info:last-child{
+    background-color: #D5D5D5;
+}
+
+/* Information Section Tablet Styling */
 
 /* @media only screen and (max-width: 760px) {
 
 } */
 
+/* Information Section Mobile Styling */
+
 @media only screen and (max-width: 460px) {
-    .Information .study, .academy-img img {
+    .Information .study, .academy-img {
         display: none;
     }
     .academy{
@@ -306,14 +317,102 @@ h2, .start-here .btn{
     }
     .academy-img-mobile img{
         width: 100%;
-
     }
     .academy-info {
         margin-left: 2rem;
         width: 100%;
+    }
+    .academy .academy-info:last-child{
         background-color: #F7F5F5;
     }
-.academy .grey {
-        background-color: #F7F5F5;
+    .academy a{
+        /* should be 3REM but 1REM looks more like the redline brief IMO */ 
+        margin-bottom: 1rem; 
+    }   
+}
+
+/* Courses Section Styling */
+
+.Courses{
+    position: relative;
+    background-color: #E8E8E8;
+    top: 2rem;
+    text-align: center;
+}
+
+.Courses h1{
+    padding: 2rem 0;
+}
+
+.course img{
+    max-width: 100%;
+    height: auto;
+}
+
+.course-container{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: left;
+    justify-content: space-between; 
+}
+
+.course{
+    width: 26.1111111%; /* to ensure 32px spacing between course elements */
+    background-color: white;
+    margin-bottom: 2rem;
+    padding-bottom: 1.5rem;
+}
+
+.course:nth-child(3n+1)
+{
+    margin-left: 4.5rem;
+}
+
+.course:nth-child(3n+3)
+{
+    margin-right: 4.5rem;
+}
+
+.course h3{
+    margin: 1rem;
+}
+
+.course h4{
+    margin: 0.5rem 3rem 0 1rem;
+    line-height: 1rem; 
+}
+
+/* Course Section Tablet Styling */
+
+/* @media only screen and (max-width: 760px) {
+
+} */
+
+/* Course Section Mobile Styling */
+
+@media only screen and (max-width: 460px) {
+    .course img, .course h4 {
+        display:none;
+    }
+    .Courses h1{
+        padding: 2rem 0 1rem 0;
+    }
+    .course-container{
+        flex-direction: column;
+        margin: 0 1rem 1.5rem 1rem;
+        flex: 1;
+    }
+    .course{
+        width: 100%;
+        background-color: #D5D5D5;
+    }
+    .course:nth-child(1n+1)
+    {
+        margin:0 0 0.5rem 0;
+        padding:0;
+    }
+    .course h3{
+        margin: 0;
+        padding: 1rem;
     }
 }
